<resources>
    <string name="app_name">Species</string>
    <string name="fondo" />
    <string name="elige_tu_specie">Elige tu specie</string>
    <string name="sector_centauri">SECTOR CENTAURI</string>
    <string name="TODO">TODO</string>


    <!-- MENU & OPTONS ACTIVITY-->
    <string name="jugar">Jugar</string>
    <string name="opciones">Opciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="music_text">Música</string>
    <string name="sound_text">Sonido</string>
    <string name="reload">Reiniciar</string>


    <string name="planet_name">Planet Name</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="fundar_colonia">Fundar Colonia</string>
    <string name="inexplorado">Sin explorar</string>
    <string name="description">description</string>



    <string name="planeta">Planeta %1$s</string>
    <string name="navegador">Navegador</string>

    <string name="naves">Naves</string>
    <string name="en_ruta">En ruta a %1$s</string>
    <string name="orbitando">Orbitando planeta %1$s</string>
    <string name="faltan_dias">Faltan %1$s dias</string>
    <string name="creando_galaxia">CREANDO GALAXIA</string>
    <string name="test_name">Test name</string>
    <string name="exit">Pulsa de nuevo para salir</string>

    <!-- Menu -->
    <string name="menu_sector">Sector</string>
    <string name="menu_system">System</string>
    <string name="menu_planet">Planetas</string>
    <string name="menu_ships">Naves</string>
    <string name="menu_builds">Estructuras</string>
    <string name="menu_navigation">Navegación</string>
    <string name="menu_stars">Estrellas</string>
    <string name="menu_tech">Tecnologías</string>
    <string name="menu_diplomacy">Diplomacia</string>
    <string name="menu_shipyard">Astillero</string>

    <string name="title_activity_sidebar">SidebarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sin_explorar">Sin Explorar</string>
    <string name="hipercrono">Hipercrono</string>
    <string name="tecnologias">Tecnologías</string>
    <string name="create_colony">Fundar Colonia</string>
    <string name="sin_produccion">Sin Producción</string>
    <string name="multiplier">x%1$s </string>
    <string name="fecha_estelar_text">Fecha Estelar</string>
    <string name="fecha_estelar">Fecha estelar: %1$s.%2$s</string>
    <string name="estrella_principal">Estrella: %1$s</string>
    <string name="surface">Surface</string>
    <string name="desc_food">Necesarios para el crecimiento de la población, se acelera en función al número de toneladas acumuladas.</string>
    <string name="desc_prod">La producción acelera la construcción de estructuras y de naves espaciales.</string>
    <string name="desc_tech">La ciencia influye en la velocidad con la que puedes investigar tecnologías</string>
    <string name="desc_def">Muestra la defensa del planeta contra bombardeos e invasiones.</string>
    <string name="desc_pop">La población es necesaria para el funcionamiento de la colonia.</string>
    <string name="planet_type">Planeta %1$s</string>
    <string name="out_production_planets">HAY PLANETAS SIN PRODUCCION</string>


    <!--SHIPTARD FRAGMENT-->
    <string name="ship_name">ship_name</string>
    <string name="total_dias">%1$d días</string>
    <string name="total_speed">Speed\n %1$d\n Kms</string>
    <string name="total_power">Power\n %1$d\n Nms</string>
    <string name="total_offense">Ofense\n %1$d\n Qmv</string>
    <string name="total_deffense">Defense\n %1$d\n Qmv</string>

    <string name="engines">Motores*</string>
    <string name="energy">Energía*</string>
    <string name="warp">WARP*</string>
    <string name="sensors">Sensores</string>
    <string name="modules">Módulos</string>
    <string name="weapons">Armas</string>
    <string name="shield">Escudos</string>
    <string name="others">Varios</string>



</resources>