<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/transparent">

    <TextView
        android:id="@+id/engineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/engines"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/engineView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="1" />

        <ImageView
            android:id="@+id/engineView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="2" />

        <ImageView
            android:id="@+id/engineView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="3" />

        <ImageView
            android:id="@+id/engineView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="4" />

        <TextView
            android:id="@+id/speedTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/yellow"
            tools:text="@string/total_speed" />

    </LinearLayout>

    <TextView
        android:id="@+id/powerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/energy"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/powerView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="5" />

        <ImageView
            android:id="@+id/powerView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="6" />

        <ImageView
            android:id="@+id/powerView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="7" />

        <ImageView
            android:id="@+id/powerView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="8" />

        <TextView
            android:id="@+id/powerTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:textSize="12sp"
            android:textColor="@color/yellow"
            tools:text="@string/total_power" />

    </LinearLayout>

    <TextView
        android:id="@+id/warpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/warp"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/warpView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="9" />

        <ImageView
            android:id="@+id/warpView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="10" />

        <ImageView
            android:id="@+id/warpView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="11" />

        <ImageView
            android:id="@+id/warpView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/square_layout"
            android:contentDescription="@string/TODO"
            android:tag="12" />

        <TextView
            android:id="@+id/offenseTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:textSize="12sp"
            android:textColor="@color/yellow"
            tools:text="@string/total_offense" />

    </LinearLayout>
</LinearLayout>